--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dom": "^0.0.3",
     "gh-pages": "^6.0.0",
+    "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -17,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-spinkit": "^3.0.0",
     "react-spinners": "^0.13.8",
+    "router": "^1.3.8",
     "sass": "^1.62.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
