--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.4",
+    "react-photo-view": "^1.2.3",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-spinkit": "^3.0.0",
