--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mimarteshop.com/",
+  "homepage": "https://teolio07.github.io/mimarte",
   "name": "mimarte",
   "version": "0.1.0",
   "private": true,
